syntax = "proto3";

option go_package = "github.com/gunsluo/go-example/grpc/keepalive/pb";

package test.hello;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {}

  rpc SayHelloProgress(HelloRequest) returns (stream SayHelloProgressReply) {}
}

// The request message containing the user's name.
message HelloRequest { string name = 1; }

// The response message containing the greetings
message HelloReply { string message = 1; }

message SayHelloProgressReply { 
  string message = 1;
  int64 progress = 2;
}
